--- a/WebContent/pages/reference_definition.html
+++ b/WebContent/pages/reference_definition.html
@@ -11,5 +11,16 @@
 </head>
 <body>
   <p><span class="definition">执行计划(Explain plan)</span> 查询在 Oracle 中被执行的一个执行路径。</p>
+  
+  <p>SQL 命令可以按功能分为：</p>
+  <ul>
+    <li>数据检索 select</li>
+    <li>数据操作(DML，data manipulation language) insert、update、delete</li>
+    <li>数据定义(DDL，data definition language) create、alter、drop、rename、truncate</li>
+    <li>数据控制(DCL，data control language) grant、revoke</li>
+    <li>事务处理 commit、rollback、savepoint、set transaction</li>
+  </ul>
+  
+  <p>SID（System Identifier）</p>
 </body>
 </html>
