--- a/WebContent/pages/reference_function.html
+++ b/WebContent/pages/reference_function.html
@@ -381,86 +381,90 @@
   <table>
     <thead>
       <tr>
-        <th>9</th>
-          <th>返回数字。如果数字是负数，则数字前面有负号</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>0</td>
-          <td>0999表示数字前面有0，9990表示数字后面有0</td>
+        <th>参数</th>
+        <th>描述</th>
       </tr>
-        <tr>
-          <td>.</td>
-          <td>表示小数点的位置</td>
+    </thead>
+    <tbody>
+      <tr>
+        <td>9</td>
+        <td>返回数字。如果数字是负数，则数字前面有负号</td>
       </tr>
-        <tr>
-          <td>,</td>
-          <td>表示在指定的位置显示逗号</td>
+      <tr>
+        <td>0</td>
+        <td>0999表示数字前面有0，9990表示数字后面有0</td>
       </tr>
-        <tr>
-          <td>$</td>
-          <td>$99表示数字前面是用货币号</td>
+      <tr>
+        <td>.</td>
+        <td>表示小数点的位置</td>
       </tr>
-        <tr>
-          <td>B</td>
-          <td>表示如果整数部分为0，则使用空格表示</td>
+      <tr>
+        <td>,</td>
+        <td>表示在指定的位置显示逗号</td>
       </tr>
-        <tr>
-          <td>C</td>
-          <td>在指定的位置使用ISO标准货币符号</td>
+      <tr>
+        <td>$</td>
+        <td>$99表示数字前面是用货币号</td>
       </tr>
-        <tr>
-          <td>D</td>
-          <td>在指定的位置返回小数点的位置</td>
+      <tr>
+        <td>B</td>
+        <td>表示如果整数部分为0，则使用空格表示</td>
       </tr>
-        <tr>
-          <td>EEEE</td>
-          <td>使用科学记数法记数</td>
+      <tr>
+        <td>C</td>
+        <td>在指定的位置使用ISO标准货币符号</td>
       </tr>
-        <tr>
-          <td>FM</td>
-          <td>删除数字的前后空格</td>
+      <tr>
+        <td>D</td>
+        <td>在指定的位置返回小数点的位置</td>
       </tr>
-        <tr>
-          <td>G</td>
-          <td>在指定的位置显示分组符号</td>
+      <tr>
+        <td>EEEE</td>
+        <td>使用科学记数法记数</td>
       </tr>
-        <tr>
-          <td>L</td>
-          <td>在指定的位置显示本地货币符号</td>
+      <tr>
+        <td>FM</td>
+        <td>删除数字的前后空格</td>
       </tr>
-        <tr>
-          <td>MI</td>
-          <td>负数的尾部有负号，正数的尾部有空格</td>
+      <tr>
+        <td>G</td>
+        <td>在指定的位置显示分组符号</td>
       </tr>
-        <tr>
-          <td>PR</td>
-          <td>负数的尾部有三角括号(&lt;>)，正数的头部和尾部有空格 </td>
+      <tr>
+        <td>L</td>
+        <td>在指定的位置显示本地货币符号</td>
       </tr>
-        <tr>
-          <td>RN/rn</td>
-          <td>返回罗马数字，RN表示大写罗马数字，rn表示小写罗马数字。数字必须是1~3999之间的整数</td>
+      <tr>
+        <td>MI</td>
+        <td>负数的尾部有负号，正数的尾部有空格</td>
       </tr>
-        <tr>
-          <td>S</td>
-          <td>S999表示负数的前面有负号，正数的前面有正号。999S表示负数的后面有负数，正数的后面有正号</td>
+      <tr>
+        <td>PR</td>
+        <td>负数的尾部有三角括号(&lt;>)，正数的头部和尾部有空格 </td>
       </tr>
-        <tr>
-          <td>TM</td>
-          <td>使用最小的字符数返回数字</td>
+      <tr>
+        <td>RN/rn</td>
+        <td>返回罗马数字，RN表示大写罗马数字，rn表示小写罗马数字。数字必须是1~3999之间的整数</td>
       </tr>
-        <tr>
-          <td>U</td>
-          <td>在指定位置返回双货币号</td>
+      <tr>
+        <td>S</td>
+        <td>S999表示负数的前面有负号，正数的前面有正号。999S表示负数的后面有负数，正数的后面有正号</td>
       </tr>
-        <tr>
-          <td>V</td>
-          <td>返回一个数字乘以10X，其中x为字符数字</td>
+      <tr>
+        <td>TM</td>
+        <td>使用最小的字符数返回数字</td>
       </tr>
-        <tr>
-          <td>X</td>
-          <td>返回十六进制数字。如果该数字不是整数，则圆整为整数</td>
+      <tr>
+        <td>U</td>
+        <td>在指定位置返回双货币号</td>
+      </tr>
+      <tr>
+        <td>V</td>
+        <td>返回一个数字乘以10X，其中x为字符数字</td>
+      </tr>
+      <tr>
+        <td>X</td>
+        <td>返回十六进制数字。如果该数字不是整数，则圆整为整数</td>
       </tr>
     </tbody>
   </table>
