--- a/WebContent/pages/object_tablespace.html
+++ b/WebContent/pages/object_tablespace.html
@@ -33,11 +33,36 @@ drop tablespace &lt;tablespace_name> including contents and datafiles;</pre>
 
   <h1>修改</h1>
   <pre class="code">
+<span class="comment">--修改默认表空间</span>
+alter user &lt;user_name> default tablespace &lt;tablespace_name>;
+
+<span class="comment">--修改表空间名称</span>
+alter tablespace &lt;tablespace_name> rename to &lt;new_tablespace_name>;
+
 alter database datafile &lt;datafile_path>
   autoextend on next &lt;next_size> maxsize [&lt;max_size> | unlimited];
+  
+alter tablespace &lt;tablespace_name> add datafile &lt;file_path> size &lt;size>
+  autoextend on next &lt;extend_size>;
 
 alter tablespace &lt;tablespace_name> [online | offline];
 
 alter tablespace &lt;tablespace_name> [read only | write];  </pre>
+
+  <h1>查询</h1>
+  <pre class="code">
+<span class="comment">--查询默认表空间</span>
+select username, default_tablespace from dba_users;
+
+<span class="comment">--查询个表空间文件信息</span>
+select file_name, tablespace_name, bytes from dba_data_files;
+
+<span class="comment">--查询表空间包含的对象</span>
+select t.owner, t.segment_name, sum(bytes) / 1024 / 1024
+  from dba_segments t
+ where t.tablespace_name = &lt;tablespace_name>
+ group by t.owner, t.segment_name
+ order by sum(bytes) desc;
+  </pre>
 </body>
 </html>
