--- a/WebContent/pages/object_role.html
+++ b/WebContent/pages/object_role.html
@@ -29,5 +29,11 @@ drop role rolename;</pre>
 SELECT * FROM DBA_ROLES; 
 SELECT * FROM DBA_ROLE_PRIVS; 
 SELECT * FROM USER_ROLE_PRIVS;</pre>
+
+  <h1>赋予</h1>
+  <pre class="code">
+grant role_name to user_name [with admin option];
+grant role_name to other_role_name [with admin option];</pre>
+  
 </body>
 </html>
