--- a/WebContent/pages/index.html
+++ b/WebContent/pages/index.html
@@ -12,7 +12,7 @@
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
   
