--- a/WebContent/pages/reference_definition.html
+++ b/WebContent/pages/reference_definition.html
@@ -7,7 +7,10 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+
 <script type="text/javascript" src="../js/title.js"></script>
+<script type="text/javascript" src="../js/highlight.pack.js"></script>
+<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
   <p><span class="definition">执行计划(Explain plan)</span> 查询在 Oracle 中被执行的一个执行路径。</p>
