--- a/WebContent/pages/reference_query.html
+++ b/WebContent/pages/reference_query.html
@@ -7,7 +7,10 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+
 <script type="text/javascript" src="../js/title.js"></script>
+<script type="text/javascript" src="../js/highlight.pack.js"></script>
+<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
   <h1>磁盘相关信息查询</h1>
